[tool.poetry]
name = "rengobot"
version = "0.1.0"
description = "Discord bot for rengo"
authors = ["ReneCareenium"]

[tool.poetry.dependencies]
python = "^3.6"
discord = "^1.7.3"
sgfmill = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
